Update class names for bootstrap 5

--- a/Zybach.Web/src/app/app.component.html
+++ b/Zybach.Web/src/app/app.component.html
@@ -8,7 +8,7 @@
 
         <br>
         <div class="row pb-3">
-            <div class="col no-gutters text-right">
+            <div class="col no-gutters text-end">
                 <a href="https://olsson.com/" alt="Olsson Associates" target="_blank">
                     <img src="assets/main/logos/olsson.png" style="height: 55px;">
                 </a></div>
@@ -18,7 +18,7 @@
                     <img src="assets/main/logos/logo_round.png" style="height: 75px;">
                 </a>
             </div>
-            <div class="col no-gutters text-left">
+            <div class="col no-gutters text-start">
                 <a href="https://sitkatech.com/" alt="ESA Sitka" target="_blank">
                     <img src="assets/main/logos/ESA-Sitka_Logo.png" style="height: 65px;">
                 </a>
