--- a/Zybach.Web/src/app/pages/chemigation-inspection-new/chemigation-inspection-new.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-inspection-new/chemigation-inspection-new.component.html
@@ -37,12 +37,12 @@
         [(inspection)]="inspection">
         </zybach-chemigation-inspection-upsert >
 
-        <div class="col-12 text-right mt-3 mr-3">
-            <button type="submit" class="btn btn-zybach mr-1">
+        <div class="col-12 text-end mt-3 me-3">
+            <button type="submit" class="btn btn-zybach me-1">
                 <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                 Save
             </button>
-            <a class="btn btn-secondary ml-1"
+            <a class="btn btn-secondary ms-1"
                 routerLink="/chemigation-permits/{{annualRecord?.ChemigationPermit.ChemigationPermitNumber}}">
                 Cancel
             </a>
