--- a/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -12,8 +12,8 @@
                         <div class="col-12 col-md-6 d-flex align-items-center">
                             Water Usage Maps
                         </div>
-                        <div class="col-12 col-md-6 text-right">
-                            <div class="float-right pl-2">
+                        <div class="col-12 col-md-6 text-end">
+                            <div class="float-end ps-2">
                                 <zybach-water-year-select [(selectedYear)]="yearToDisplay" (selectedYearChange)="updateAnnualData()"
                                     [(allYearsSelected)]="allYearsSelected" (allYearsSelectedChange)="updateAnnualData()">
                                 </zybach-water-year-select>
