--- a/Zybach.Web/src/app/pages/field-definition-edit/field-definition-edit.component.html
+++ b/Zybach.Web/src/app/pages/field-definition-edit/field-definition-edit.component.html
@@ -20,7 +20,7 @@
                 [(ngModel)]="fieldDefinition.FieldDefinitionValue">
             </editor>
             <div style="float:right;">
-                <button type="button" class="btn btn-zybach mt-1 mr-1 mb-1" (click)="saveDefinition()" [disabled]="isLoadingSubmit">Save</button>
+                <button type="button" class="btn btn-zybach mt-1 me-1 mb-1" (click)="saveDefinition()" [disabled]="isLoadingSubmit">Save</button>
                 <a routerLink="/labels-and-definitions" class="btn btn-secondary mt-1 mb-1">Cancel</a>
             </div>
         </div>
