--- a/Zybach.Web/src/app/pages/field-definition-list/field-definition-list.component.html
+++ b/Zybach.Web/src/app/pages/field-definition-list/field-definition-list.component.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <div class="container">
-    <fresca-clear-grid-filters-button class="float-right m-2" [grid]="fieldDefinitionsGrid">
+    <fresca-clear-grid-filters-button class="float-end m-2" [grid]="fieldDefinitionsGrid">
     </fresca-clear-grid-filters-button>
 
     <div class="table-responsive">
