--- a/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -39,8 +39,8 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col mx-1">
-                            <button (click)="login()" class="btn btn-zybach mr-1">Login</button>
-                            <button (click)="createAccount()" class="btn btn-zybach ml-1">Create
+                            <button (click)="login()" class="btn btn-zybach me-1">Login</button>
+                            <button (click)="createAccount()" class="btn btn-zybach ms-1">Create
                                 Account</button>
                         </div>
                     </div>
