--- a/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
+++ b/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
@@ -20,8 +20,8 @@
 <div class="container">
     <div class="row my-2">
         <div class="col">
-            <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/reports/new"><span class="fas fa-plus"></span> New Report Template</a>
-            <fresca-clear-grid-filters-button class="float-right mr-3" [grid]="reportTemplatesGrid">
+            <a class="btn btn-zybach btn-md me-3 float-end" routerLink="/reports/new"><span class="fas fa-plus"></span> New Report Template</a>
+            <fresca-clear-grid-filters-button class="float-end me-3" [grid]="reportTemplatesGrid">
             </fresca-clear-grid-filters-button>
         </div>
     </div>
