--- a/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
+++ b/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
@@ -74,12 +74,12 @@
                     <div class="col">
                         <i class="fas fa-bolt"></i> Required field
                     </div>
-                    <div class="col-auto ml-auto">
+                    <div class="col-auto ms-auto">
                         <button type="submit" class="btn btn-zybach" [disabled]=" isLoadingSubmit">
                             <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                             Save
                         </button>
-                        <a class="btn btn-secondary ml-2" routerLink="/sensor-anomalies">
+                        <a class="btn btn-secondary ms-2" routerLink="/sensor-anomalies">
                             Cancel
                         </a>
                     </div>
