--- a/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
+++ b/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
@@ -61,7 +61,7 @@
                         </ng-template>
                     </div>
                 </div>
-                <div class="text-right" *ngIf="lastUpdated"><i>Last refreshed at {{ lastUpdated | date:"mediumTime"}}</i></div>
+                <div class="text-end" *ngIf="lastUpdated"><i>Last refreshed at {{ lastUpdated | date:"mediumTime"}}</i></div>
             </div>
         </div>
     
