--- a/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
+++ b/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
@@ -8,9 +8,9 @@
     </div>
     <div class="row mt-2">
         <div class="col">
-            <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+            <button class="btn btn-secondary btn-md float-end me-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
             ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-            <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="sensorsGrid">
+            <fresca-clear-grid-filters-button class="me-3 float-end" [grid]="sensorsGrid">
             </fresca-clear-grid-filters-button>
         </div>
     </div>
