--- a/Zybach.Web/src/app/pages/sensor-status-map/sensor-status-map.component.html
+++ b/Zybach.Web/src/app/pages/sensor-status-map/sensor-status-map.component.html
@@ -1,7 +1,7 @@
 <div class="row mb-2">
     <div class="col-lg-3"   >
         <div class="row mb-3 align-items-end">
-            <div class="col-auto pr-0">
+            <div class="col-auto pe-0">
                 <label class="control-label d-inline-block">Filter By</label>
             </div>
             <div class="col">
