--- a/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -62,8 +62,8 @@
                                     <div class="col-auto">
                                         <button (click)="setFullRange($event)" class="btn btn-zybach">Full Range</button>
                                     </div>
-                                    <div class="col-auto ml-auto">
-                                        <a class="btn btn btn-zybach float-right" (click)="exportWaterLevelInspectionChartData()"><span class="fas fa-download"></span> Download CSV</a>
+                                    <div class="col-auto ms-auto">
+                                        <a class="btn btn btn-zybach float-end" (click)="exportWaterLevelInspectionChartData()"><span class="fas fa-download"></span> Download CSV</a>
                                     </div>
                                 </div>
                                 <div class="row mb-3">
