--- a/Zybach.Web/src/app/pages/water-level-inspection-detail/water-level-inspection-detail.component.html
+++ b/Zybach.Web/src/app/pages/water-level-inspection-detail/water-level-inspection-detail.component.html
@@ -38,80 +38,80 @@
                     <div class="row col-6">
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Measurement: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>{{waterLevelInspection.Measurement}}
                                 </p>
                             </div>
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Measuring Equipment: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>{{waterLevelInspection.MeasuringEquipment}}
                                 </p>
                             </div>
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Has Oil? </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>{{waterLevelInspection.HasOil ? 'Yes' : 'No'}}
                                 </p>
                             </div>
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Has Broken Tape? </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>{{waterLevelInspection.HasBrokenTape ? 'Yes' : 'No'}}
                                 </p>
                             </div>
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Accuracy: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>{{waterLevelInspection.Accuracy}}
                                 </p>
                             </div>
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Method: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>{{waterLevelInspection.Method}}
                                 </p>
                             </div>
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Crop: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>{{waterLevelInspection.Crop}}
                                 </p>
                             </div>
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Notes: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.InspectionNotes}}
                                 </p>
@@ -122,10 +122,10 @@
                     <div class="row col-6">
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Party: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.Party}}
                                 </p>
@@ -133,10 +133,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Source Agency: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.SourceAgency}}
                                 </p>
@@ -144,10 +144,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Source Code: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.SourceCode}}
                                 </p>
@@ -155,10 +155,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Time Datum Code: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.TimeDatumCode}}
                                 </p>
@@ -166,10 +166,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Time Datum Reliability: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.TimeDatumReliability}}
                                 </p>
@@ -177,10 +177,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Level Type Code: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.LevelTypeCode}}
                                 </p>
@@ -188,10 +188,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Agency Code: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.AgencyCode}}
                                 </p>
@@ -199,10 +199,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Access: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.Access}}
                                 </p>
@@ -210,10 +210,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Hold: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.Hold}}
                                 </p>
@@ -221,10 +221,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Cut: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.Cut}}
                                 </p>
@@ -232,10 +232,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>MP: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.MP}}
                                 </p>
@@ -243,10 +243,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Primary? </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.IsPrimary ? 'Yes' : 'No'}}
                                 </p>
@@ -254,10 +254,10 @@
                         </div>
 
                         <div class="row col-12">
-                            <div class="col-6 text-right">
+                            <div class="col-6 text-end">
                                 <p><strong>Water Level: </strong></p>
                             </div>
-                            <div class="col-6 text-left">
+                            <div class="col-6 text-start">
                                 <p>
                                     {{waterLevelInspection.WaterLevel}}
                                 </p>
@@ -268,13 +268,13 @@
                 </div>
             </div>
         </div>
-        <div class="row float-right mt-3">
-            <a class="btn btn-zybach btn-md float-right mr-3"
+        <div class="row float-end mt-3">
+            <a class="btn btn-zybach btn-md float-end me-3"
                 routerLink="/water-level-inspections/{{waterLevelInspection.WaterLevelInspectionID}}/edit">
                 <span class="fas fa-edit"></span> Edit Inspection
             </a>
             
-            <button type="button" class="btn btn-zybach btn-md mr-3" [disabled]="isPerformingAction" (click)="launchDeleteInspectionModal(waterLevelInspection.WaterLevelInspectionID)">
+            <button type="button" class="btn btn-zybach btn-md me-3" [disabled]="isPerformingAction" (click)="launchDeleteInspectionModal(waterLevelInspection.WaterLevelInspectionID)">
                 <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                 <span class="fas fa-trash"></span> Delete Inspection
             </button>
