--- a/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
+++ b/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
@@ -9,10 +9,10 @@
     </div>
 
     <div class="row mt-2">
-        <div class="col-auto ml-auto">
-            <fresca-clear-grid-filters-button [grid]="wellGroupsGrid" class="mr-2"></fresca-clear-grid-filters-button>
+        <div class="col-auto ms-auto">
+            <fresca-clear-grid-filters-button [grid]="wellGroupsGrid" class="me-2"></fresca-clear-grid-filters-button>
 
-            <button class="btn btn-secondary btn-md mr-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+            <button class="btn btn-secondary btn-md me-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
                 ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
             
             <a class="btn btn-primary btn-md" routerLink="new">New Well Group <span class="fas fa-plus"></span></a>
