--- a/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
+++ b/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
@@ -51,7 +51,7 @@
                     </label>
                 </div>
             </div>
-            <div class="col-auto ml-auto">
+            <div class="col-auto ms-auto">
                 <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="downloadCsv()" placement="top"
                     ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
                 <fresca-clear-grid-filters-button [grid]="wellPumpingSummariesGrid"></fresca-clear-grid-filters-button>
