--- a/Zybach.Web/src/app/shared/components/custom-rich-text/custom-rich-text.component.html
+++ b/Zybach.Web/src/app/shared/components/custom-rich-text/custom-rich-text.component.html
@@ -22,6 +22,6 @@
     <div *ngIf="isEditing">
         <editor #tinyMceEditor [init]="tinyMceConfig" [(ngModel)]="editedContent"></editor>
         
-        <button type="button" class="btn btn-primary mt-1 mr-1" (click)="saveEdit()">Save</button>
+        <button type="button" class="btn btn-primary mt-1 me-1" (click)="saveEdit()">Save</button>
         <button type="button" class="btn btn-secondary mt-1" (click)="cancelEdit()">Cancel</button>
 </div>
