--- a/Zybach.Web/src/app/shared/components/field-definition/field-definition.component.html
+++ b/Zybach.Web/src/app/shared/components/field-definition/field-definition.component.html
@@ -5,12 +5,12 @@
 <div *ngIf="!isLoading" class="d-inline">
     <ng-template #popTitle>
         <div class="row">
-            <div class="col-auto mr-auto">
+            <div class="col-auto me-auto">
                 <div class="mt-1">{{fieldDefinition.FieldDefinitionType.FieldDefinitionTypeDisplayName}}</div>
             </div>
             <div class="col-auto" *ngIf="!isEditing">
                 <div class="row">
-                    <div class="col-sm-2 pl-0 pr-0">
+                    <div class="col-sm-2 ps-0 pe-0">
                         <button type="button" class="btn btn-link" (click)="enterEdit()">
                             <i class="fa fa-pencil-square-o" attr.aria-label="Edit the definition for {{fieldDefinition.FieldDefinitionType.FieldDefinitionTypeDisplayName}}">
                             </i>
@@ -34,7 +34,7 @@
             </editor>
             
             <div style="float:right;">
-                <button type="button" class="btn btn-sm btn-zybach mt-1 mr-1 mb-1" (click)="saveEdit()">Save</button>
+                <button type="button" class="btn btn-sm btn-zybach mt-1 me-1 mb-1" (click)="saveEdit()">Save</button>
                 <button type="button" class="btn btn-sm btn-secondary mt-1 mb-1" (click)="cancelEdit(p)">Cancel</button>
             </div>
         </div>
