--- a/Zybach.Web/src/app/pages/disclaimer/disclaimer.component.html
+++ b/Zybach.Web/src/app/pages/disclaimer/disclaimer.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="row" *ngIf="checkDisclaimerAcknowledged()">
         <div class="col">
-            <button class="btn btn-zybach btn-sm mr-3 float-right"
+            <button class="btn btn-zybach btn-sm me-3 float-end"
                 (click)="setDisclaimerAcknowledged()">Acknowledge</button>
         </div>
     </div>
