--- a/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
+++ b/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
@@ -66,9 +66,9 @@
                     <ng-template #hasOpenETData>
                         <div class="row">
                             <div class="col">
-                                <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+                                <button class="btn btn-secondary btn-md float-end m-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
                                 ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-                                <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="openETDataGrid">
+                                <fresca-clear-grid-filters-button class="m-2 float-end" [grid]="openETDataGrid">
                                 </fresca-clear-grid-filters-button>
                             </div> 
                         </div>
