--- a/Zybach.Web/src/app/pages/report-template-detail/report-template-detail.component.html
+++ b/Zybach.Web/src/app/pages/report-template-detail/report-template-detail.component.html
@@ -18,7 +18,7 @@
         <div class="col-sm-6">
             <div class="card">
                 <div class="card-header">
-                    <a *ngIf="currentUserIsAdmin()" class="btn btn-zybach btn-sm float-right"
+                    <a *ngIf="currentUserIsAdmin()" class="btn btn-zybach btn-sm float-end"
                         routerLink="/reports/{{reportTemplate?.ReportTemplateID}}/edit">
                         <span class="fas fa-edit"></span> Edit
                     </a>
