--- a/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
+++ b/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
@@ -17,8 +17,8 @@
     <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
 
     <div class="row">
-        <div class="col-auto ml-auto">
-            <fresca-clear-grid-filters-button class="ml-3" [grid]="wellsGrid"></fresca-clear-grid-filters-button>
+        <div class="col-auto ms-auto">
+            <fresca-clear-grid-filters-button class="ms-3" [grid]="wellsGrid"></fresca-clear-grid-filters-button>
             <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="downloadCsv()" placement="top" ngbTooltip="Download as CSV">
                 <i class="fas fa-download"></i>
              </button>
