--- a/Zybach.Web/src/app/pages/support-ticket-edit/support-ticket-edit.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-edit/support-ticket-edit.component.html
@@ -33,15 +33,15 @@
         <zybach-support-ticket-upsert #supportTicketUpsertForm [(model)]="model" [creatorUser]="creatorUser">
         </zybach-support-ticket-upsert >
 
-        <div class="col-12 text-right mt-3 mr-3">
-            <div class="col-sm text-left float-right">
+        <div class="col-12 text-end mt-3 me-3">
+            <div class="col-sm text-start float-end">
                 <i class="fas fa-bolt"></i> Required field
             </div>
-            <button type="submit" class="btn btn-zybach mr-1">
+            <button type="submit" class="btn btn-zybach me-1">
                 <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                 Save
             </button>
-            <a class="btn btn-secondary ml-1"
+            <a class="btn btn-secondary ms-1"
                 routerLink="..">
                 Cancel
             </a>
