--- a/Zybach.Web/src/app/pages/user-invite/user-invite.component.html
+++ b/Zybach.Web/src/app/pages/user-invite/user-invite.component.html
@@ -74,13 +74,13 @@
             <div class="col-xs-12 col-sm-2">
                 <i class="fas fa-bolt"></i> Required field
             </div>
-            <div class="col-xs-12 col-sm-10 text-right">
+            <div class="col-xs-12 col-sm-10 text-end">
                 <button type="submit" class="btn btn-zybach"
                     [disabled]="isLoadingSubmit">
                     <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                     Invite
                 </button>
-                <a class="btn btn-secondary ml-1" routerLink="/users">Cancel</a>
+                <a class="btn btn-secondary ms-1" routerLink="/users">Cancel</a>
             </div>
         </div>
     </form>
