--- a/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
+++ b/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
@@ -22,7 +22,7 @@
                         <div class="card" *ngIf="wellGroup">
                             <div class="card-header">
                                 Well Group
-                                <div class="float-right">
+                                <div class="float-end">
                                     <a class="btn btn-zybach btn-sm" routerLink="edit">
                                         <span class="fas fa-edit"></span> Edit
                                     </a>
