--- a/Zybach.Web/src/app/pages/well-new/well-new.component.html
+++ b/Zybach.Web/src/app/pages/well-new/well-new.component.html
@@ -64,12 +64,12 @@
             <div class="col-sm">
                 <i class="fas fa-bolt"></i> Required field
             </div>
-            <div class="col-sm text-right">
+            <div class="col-sm text-end">
                 <button type="submit" class="btn btn-zybach" [disabled]="!newWellForm.form.valid || isLoadingSubmit">
                     <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                     Submit
                 </button>
-                <a class="btn btn-secondary ml-1" routerLink="/well-map">Cancel</a>
+                <a class="btn btn-secondary ms-1" routerLink="/well-map">Cancel</a>
             </div>
         </div>
     </form>
