--- a/Zybach.Web/src/app/shared/components/custom-dropdown-filter/custom-dropdown-filter.component.html
+++ b/Zybach.Web/src/app/shared/components/custom-dropdown-filter/custom-dropdown-filter.component.html
@@ -5,10 +5,10 @@
         <input type="radio" name="select-all" id="deselect" [checked]="state.deselectAll" (change)="onDeselectAll()">
         <label for="deselect">Deselect All</label>
     </div>
-    <div id="filter-options" class="pt-2 pl-2">
+    <div id="filter-options" class="pt-2 ps-2">
         <div *ngFor="let element of getDropdownValues()">
             <input type="checkbox" name="{{element}}" [(ngModel)]="state.filterOptions[element]" (ngModelChange)="updateFilter()" checked>
-            <label for="{{element}}" class="ml-2">{{element}}</label>
+            <label for="{{element}}" class="ms-2">{{element}}</label>
         </div>
     </div>
 </div>
