--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -4,7 +4,7 @@
     <a routerLink="/" routerLinkActive="active" class="navbar-brand nav-link">
         Groundwater Managers Platform
     </a>
-    <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-target="#navbar2"
+    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-target="#navbar2"
         (click)="toggleCurrentPageHeader()">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,13 +18,13 @@
     </a>
 
     <div class="flex-row navbar-collapse collapse" id="navbar2">
-        <ul class="navbar-nav pl-2">
+        <ul class="navbar-nav ps-2">
 
             <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated()">
                 <a href="javascript:void(0);" (click)="login()" routerLinkActive="active" class="nav-link">Sign In</a>
             </li>
             <li class="nav-item dropdown welcomeUser" routerLinkActive="active" *ngIf="isAuthenticated()">
-                <a href="#" class="nav-link dropdown-toggle pr-3" role="button" data-bs-toggle="dropdown"
+                <a href="#" class="nav-link dropdown-toggle pe-3" role="button" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Welcome {{getUserName()}}
                 </a>
@@ -113,7 +113,7 @@
 
     <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
         <ul class="navbar-nav">
-            <li class="nav-item mapItem" [ngClass]="{'currentPage': isWaterLevelExplorerCurrentPage(), 'float-right': !isAuthenticated()}">
+            <li class="nav-item mapItem" [ngClass]="{'currentPage': isWaterLevelExplorerCurrentPage(), 'float-end': !isAuthenticated()}">
                 <a class="nav-link" routerLinkActive="active" routerLink="/water-level-explorer">
                     <img src="/assets/main/nav/water-level-explorer.png" /> Water Level Explorer
                 </a>
